--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,6 +18,7 @@ jobs:
         echo test
     - name: Run the deployment script
       run: |
+        eval "$(ssh-agent -s)" 
         ssh-add - <<< "${{ secrets.KEY }}"
         echo deployment goes under this line
         ssh -o StrictHostKeychecking=no \
