--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install dependencies
       run: |
-        echo test
+        echo IP: $(curl -4 icanhazip.com)
     - name: Run the deployment script
       run: |
         eval "$(ssh-agent -s)" 
